syntax='proto3';
package com.example.grpc;

message addNewDrone {
  string message = 1;
  int32 idDrone = 2;
  string ipAddress = 3;
  int32 portNumber = 4;
  int32 xPosition = 5;
  int32 yPosition = 6;
}

message responseAddNewDrone {
  string response = 1;
}


service newDrone {
  rpc MessageAddDrone(addNewDrone) returns (responseAddNewDrone);
}
